# resource-diagrams

./: .gitignore  ABOUT.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVELOPMENT.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  modeling_pattern.md
.github/workflows/: ci.yml
docs/: diagrammatic-modeling-of-agent-information-flow.md  gallery.md  index.md  recipe_langgraph.md
examples/: __init__.py  data_services_programs.py  diagram_export.py  fixed_point_demo.py  guarded_contrast.py  hierarchical_agents.py  info_flow_diagram.py  langgraph_style_transcription.py  multi_agent_coordination.py  react_loop.py  reflexion_critique.py  reflexion_loop.py  resource_trace.py  simple_agent_resource_model.py
examples/exports/: 01_basic_string_diagrams.mmd  02_universal_evaluator_law.mmd  03_fixed_point_construction.mmd  04_data_services_comonoid.mmd  05_react_agent_scaffold.mmd  06_agent_policy_fixed_point.mmd  07_hierarchical_nested_agents.mmd  08_reflexion_critic_policy.mmd  09_multi_agent_coordination.mmd
notebooks/: __init__.py  getting_started.py  reproducing_paper_i.py
src/resource_diagrams/: __init__.py  __main__.py  cli.py  core.py  data_services.py  evaluators.py
src/resource_diagrams/diagrams/: __init__.py  diagram.py  examples.py  mermaid_renderer.py  safety.py
src/resource_diagrams/models/: __init__.py  agents.py  reasoning.py  resources.py
tests/: conftest.py  paper_laws.py  test_core.py  test_data_services.py  test_diagrams.py  test_evaluators.py  test_integration.py  test_models.py
