[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-diagrams"
version = "0.1.0"
description = "Diagrammatic analysis of resources in AI systems using string diagrams and monoidal categories"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Resource Diagrams Contributors"}
]
# URLs point to the canonical repository location.
keywords = [
    "ai-safety",
    "string-diagrams",
    "categorical",
    "formal-methods",
    "oversight",
    "security",
    "agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

[project.optional-dependencies]
# No optional extras defined for v0.1. The core library is fully self-contained
# (pure stdlib + no required services). Future work on LLM-assisted features
# is tracked in ROADMAP.md.
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "hypothesis>=6.0",
]

[project.urls]
Homepage = "https://github.com/formalsymbolic/resource-diagrams"
Repository = "https://github.com/formalsymbolic/resource-diagrams"
Documentation = "https://github.com/formalsymbolic/resource-diagrams#readme"
Issues = "https://github.com/formalsymbolic/resource-diagrams/issues"

[project.scripts]
# Zero-dependency CLI entry point (stdlib only + public API).
# Provides `resource-diagrams demo ...`, `analyze ...`, and `laws` for
# convenient exploration and re-running structural witnesses.
resource-diagrams = "resource_diagrams.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
# Packaging hygiene: never ship compiled Python artifacts (even if accidentally
# present in the src tree). Complements .gitignore. *.py files + py.typed are
# included by default for this typed package.
"*" = ["__pycache__/*", "*.pyc", "*.pyo"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# F821 is often noisy with forward references even when `from __future__ import annotations` is used.
# We keep the annotations clean and let mypy be the main enforcer for undefined names.
ignore = ["F821"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["E402", "E501"]
"examples/*.py" = ["E501"]
"src/resource_diagrams/__init__.py" = ["E402"]
"tests/test_core.py" = ["E402"]

[tool.ruff.format]
# Explicit configuration to match `ruff format .` usage documented in
# DEVELOPMENT.md and CONTRIBUTING.md. Keeps formatting hygiene consistent.
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "law: formal diagrammatic or categorical law from the Monoidal Computer papers (machine-checked witness)",
    "safety: tests exercising the SafetyAnalyzer, geometry reports, and policy/sensitive flow analysis",
    "property: property-based tests (hypothesis) exercising invariants over generated inputs",
    "core: core Object/Morphism/DataService behavior",
    "data_service: DataService comonoid (copy Δ / delete ⊤) laws and protocols",
    "fixedpoint: MonoidalComputer fixed-point, Φ, universal/partial evaluator constructions",
    "tensor: monoidal tensor product laws and interactions (Object/Morphism)",
    "composition: sequential composition laws, units, identities, errors",
    "modeling: high-level models/ builders (ReAct, hierarchical, reflexion, multi-agent, resources)",
    "report: SecurityReport / SecurityFinding generation, findings, risk levels, recommendations",
    "serialization: to_dict, roundtrips, JSON-ability of reports/geometry (audit artifacts)",
    "edge_case: boundary, degenerate, empty, minimal, and unusual inputs",
    "error: explicit error paths, type mismatches, partiality, warnings, fallbacks",
    "regression: historical or specific pattern regression guards (e.g. guarded contrast, fork classification)",
]
